# sequence_ocaml

./: dune-project  simple_sequence.opam
lib/: simple_sequence.ml  simple_sequence.mli
test/: simple_sequence.ml
